# ComfyUI-chao

./: LICENSE  README.md  __init__.py  manifest.json  pyproject.toml  新节点
nodes/: batch_size_control_node.py  grid_split_node copy.py  prompt_edit_node.py  prompt_node.py  qwen_bloom_effect.py  qwen_camera_preset.py  qwen_grain_effect.py  qwen_light_preset.py  qwen_size_preset.py  random_number_node.py  resolution_node.py  shutdown_timer_advanced_node.py  shutdown_timer_node.py  smart_display_node.py  text_processing_node.py  theme_prompt_node.py
web/extensions/: chao-prompt-edit-ui.js  chao-resolution-ui.js  chao_resolution_node.json  xishen-resolution-ui.js  xishen-smart-display-ui.js  xishen-theme-prompt-ui.js  xishen_random_integer_ui.js
