[project]
name = "comfyui-chao"
description = "A comprehensive custom node pack for ComfyUI with 13 utility nodes including random number generation, resolution control, prompt management, and image effects."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/xtanqn/comfyui-chao"
# 你可以替换为你的仓库链接

[tool.comfy]
PublisherId = "xtanqn"
DisplayName = "comfyui-chao"
Icon = ""